--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a to do list website">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
-    <link rel="stylesheet" href="css-script files/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="JPG" href="images/icon.jpg">
-    <script defer src="css-script files/script.js"></script>
+    <script defer src="script.js"></script>
     <title>TO LIST APPLICATION</title>
 </head>
 <body>
