--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1>TO DO LIST</h1>
         </header>
         <i class="fa fa-bars" aria-hidden="true"></i>
+        <button id="button-mode" aria-hidden="true">Light Mode</button>
         <section class="menuContent hidden_menu" id="navBar">
             <h2>Your Tasks</h2>
             <ul>
